--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
@@ -41,5 +42,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+    implementation 'com.google.android.gms:play-services-fitness:15.0.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
