--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Sick_activity"></activity>
+        <activity android:name=".Sick_activity"
+            android:parentActivityName=".MainActivity"
+            android:label="Sơ cứu"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
